--- a/LibriVox/StoryBoard/Profile.storyboard
+++ b/LibriVox/StoryBoard/Profile.storyboard
@@ -42,7 +42,7 @@
                                 </constraints>
                             </imageView>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Leandro Silva" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="gbB-Hf-nuj">
-                                <rect key="frame" x="16" y="316" width="149" height="33"/>
+                                <rect key="frame" x="16" y="316" width="148.66666666666666" height="33"/>
                                 <fontDescription key="fontDescription" name="Nunito-SemiBold" family="Nunito" pointSize="24"/>
                                 <nil key="textColor"/>
                                 <nil key="highlightedColor"/>
@@ -57,13 +57,13 @@ asdadnasd</string>
                                 <nil key="highlightedColor"/>
                             </label>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="External Links" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="KwU-3K-u1w">
-                                <rect key="frame" x="16" y="474.33333333333331" width="361" height="27.666666666666686"/>
+                                <rect key="frame" x="16" y="474.33333333333331" width="361" height="27.333333333333314"/>
                                 <fontDescription key="fontDescription" name="Nunito-Medium" family="Nunito" pointSize="20"/>
                                 <nil key="textColor"/>
                                 <nil key="highlightedColor"/>
                             </label>
                             <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="-1" estimatedSectionHeaderHeight="-1" sectionFooterHeight="-1" estimatedSectionFooterHeight="-1" translatesAutoresizingMaskIntoConstraints="NO" id="EXz-Eg-IvX">
-                                <rect key="frame" x="0.0" y="510" width="393" height="50"/>
+                                <rect key="frame" x="0.0" y="509.66666666666674" width="393" height="50"/>
                                 <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                                 <constraints>
                                     <constraint firstAttribute="height" constant="50" id="yaD-tv-6MS"/>
@@ -107,7 +107,7 @@ asdadnasd</string>
                                 </prototypes>
                             </tableView>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Audio Books" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="MMd-Xu-3W5">
-                                <rect key="frame" x="16" y="576" width="361" height="27"/>
+                                <rect key="frame" x="16" y="575.66666666666663" width="361" height="27.333333333333371"/>
                                 <fontDescription key="fontDescription" name="Nunito-Medium" family="Nunito" pointSize="20"/>
                                 <nil key="textColor"/>
                                 <nil key="highlightedColor"/>
@@ -308,7 +308,7 @@ asdadnasd</string>
                                 </constraints>
                             </imageView>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Definitions" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="j4e-Gp-6Ih">
-                                <rect key="frame" x="16.000000000000007" y="358.66666666666669" width="121.66666666666669" height="33"/>
+                                <rect key="frame" x="15.999999999999993" y="358.66666666666669" width="121.33333333333331" height="33"/>
                                 <fontDescription key="fontDescription" name="Nunito-Bold" family="Nunito" pointSize="24"/>
                                 <nil key="textColor"/>
                                 <nil key="highlightedColor"/>
@@ -346,7 +346,7 @@ asdadnasd</string>
                                 </constraints>
                             </imageView>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="About" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="xiL-As-1mq">
-                                <rect key="frame" x="69" y="713" width="45.666666666666657" height="22"/>
+                                <rect key="frame" x="69" y="713" width="45.333333333333343" height="22"/>
                                 <fontDescription key="fontDescription" name="Nunito-SemiBold" family="Nunito" pointSize="16"/>
                                 <nil key="textColor"/>
                                 <nil key="highlightedColor"/>
@@ -359,8 +359,8 @@ asdadnasd</string>
                                     <constraint firstAttribute="width" constant="30" id="w8u-8E-glM"/>
                                 </constraints>
                             </imageView>
-                            <label opaque="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Logout" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="mTh-7F-39H">
-                                <rect key="frame" x="69" y="611.66666666666663" width="52" height="22"/>
+                            <label opaque="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" misplaced="YES" text="Logout" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="mTh-7F-39H">
+                                <rect key="frame" x="69" y="612" width="68" height="22"/>
                                 <fontDescription key="fontDescription" name="Nunito-SemiBold" family="Nunito" pointSize="16"/>
                                 <nil key="textColor"/>
                                 <nil key="highlightedColor"/>
@@ -438,7 +438,7 @@ asdadnasd</string>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <textField opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="248" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="First / Last name" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="a6g-77-7mQ" customClass="BlueShadowUITextField" customModule="LibriVox" customModuleProvider="target">
-                                <rect key="frame" x="24" y="356" width="345" height="31"/>
+                                <rect key="frame" x="24" y="351" width="345" height="31"/>
                                 <constraints>
                                     <constraint firstAttribute="height" constant="31" id="fES-Cc-7AA"/>
                                 </constraints>
@@ -446,17 +446,23 @@ asdadnasd</string>
                                 <textInputTraits key="textInputTraits" textContentType="name"/>
                             </textField>
                             <textField opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="248" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Email" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="8ET-f4-jfd" customClass="BlueShadowUITextField" customModule="LibriVox" customModuleProvider="target">
-                                <rect key="frame" x="24" y="453" width="345" height="34"/>
+                                <rect key="frame" x="24" y="445" width="345" height="31"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="31" id="rPD-wb-jR3"/>
+                                </constraints>
                                 <fontDescription key="fontDescription" name="Nunito-Regular" family="Nunito" pointSize="14"/>
                                 <textInputTraits key="textInputTraits" autocorrectionType="no" textContentType="email"/>
                             </textField>
                             <textField opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="248" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Username" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="5YG-ci-nMK" customClass="BlueShadowUITextField" customModule="LibriVox" customModuleProvider="target">
-                                <rect key="frame" x="24" y="403" width="345" height="34"/>
+                                <rect key="frame" x="24" y="398" width="345" height="31"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="31" id="Cqp-cB-yn8"/>
+                                </constraints>
                                 <fontDescription key="fontDescription" name="Nunito-Regular" family="Nunito" pointSize="14"/>
                                 <textInputTraits key="textInputTraits" textContentType="username"/>
                             </textField>
                             <imageView clipsSubviews="YES" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="Wys-l8-HH2" customClass="CircularImageView" customModule="LibriVox" customModuleProvider="target">
-                                <rect key="frame" x="121.66666666666669" y="166" width="150" height="150"/>
+                                <rect key="frame" x="121.66666666666669" y="161" width="150" height="150"/>
                                 <color key="backgroundColor" name="Gren Tone"/>
                                 <constraints>
                                     <constraint firstAttribute="height" constant="150" id="7nI-1e-kn3"/>
@@ -464,7 +470,7 @@ asdadnasd</string>
                                 </constraints>
                             </imageView>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="VBG-ZL-MpH">
-                                <rect key="frame" x="24" y="517" width="345" height="36"/>
+                                <rect key="frame" x="24" y="506.00000000000006" width="345" height="32.666666666666686"/>
                                 <color key="tintColor" name="Green Tone"/>
                                 <state key="normal" title="Button"/>
                                 <buttonConfiguration key="configuration" style="filled" cornerStyle="fixed">
@@ -486,19 +492,20 @@ asdadnasd</string>
                                 </connections>
                             </button>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Change Password" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="aHV-oI-6lq">
-                                <rect key="frame" x="24" y="593" width="200.66666666666666" height="33"/>
+                                <rect key="frame" x="24" y="578.66666666666663" width="196.66666666666666" height="28"/>
                                 <fontDescription key="fontDescription" name="Nunito-Bold" family="Nunito" pointSize="24"/>
                                 <nil key="textColor"/>
                                 <nil key="highlightedColor"/>
                             </label>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="You will receive an email with a link to update your password." textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="odd-vy-C2n">
-                                <rect key="frame" x="24" y="634" width="345" height="40.666666666666629"/>
-                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="odd-vy-C2n">
+                                <rect key="frame" x="24" y="614.66666666666663" width="345" height="52.666666666666629"/>
+                                <string key="text">You will receive an email with a link to update your password.                                                                                                             Don't forget to check the Spam Box!</string>
+                                <fontDescription key="fontDescription" name="Nunito-Light" family="Nunito" pointSize="15"/>
                                 <nil key="textColor"/>
                                 <nil key="highlightedColor"/>
                             </label>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="JeC-V7-q7r">
-                                <rect key="frame" x="24" y="704.66666666666663" width="345" height="36"/>
+                                <rect key="frame" x="24" y="697.33333333333337" width="345" height="32.666666666666629"/>
                                 <color key="tintColor" name="Green Tone"/>
                                 <state key="normal" title="Button"/>
                                 <buttonConfiguration key="configuration" style="filled" cornerStyle="fixed">
@@ -520,7 +527,7 @@ asdadnasd</string>
                                 </connections>
                             </button>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Update Profile" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="k2D-ld-urx">
-                                <rect key="frame" x="24" y="103" width="162" height="33"/>
+                                <rect key="frame" x="24" y="103" width="153.66666666666666" height="28"/>
                                 <fontDescription key="fontDescription" name="Nunito-Bold" family="Nunito" pointSize="24"/>
                                 <nil key="textColor"/>
                                 <nil key="highlightedColor"/>
@@ -616,10 +623,10 @@ asdadnasd</string>
             <size key="intrinsicContentSize" width="92.333333333333329" height="34"/>
         </designable>
         <designable name="8ET-f4-jfd">
-            <size key="intrinsicContentSize" width="63" height="34"/>
+            <size key="intrinsicContentSize" width="62.333333333333336" height="34"/>
         </designable>
         <designable name="a6g-77-7mQ">
-            <size key="intrinsicContentSize" width="132" height="34"/>
+            <size key="intrinsicContentSize" width="133.33333333333334" height="34"/>
         </designable>
     </designables>
     <resources>
